# school-finder

crew/: .env  Dockerfile  main.py  pyproject.toml  requirements.txt  run_ui.bat  school_ui.py  streamlit_app_new.py
crew/src/crew/: main.py  school_crew.py
crew/src/crew/config/: agents.yaml  tasks.yaml
crew/src/crew/tools/: location.py  websearch.py
